deploy/openshift/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aam
  labels:
    app.kubernetes.io/name: advanced-automation-manager
