deploy/openshift/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: aam
  labels:
    app.kubernetes.io/name: aam-ui
spec:
  to:
    kind: Service
    name: aam-ui
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
